crates/ruff_python_parser/tests/snapshots/invalid_syntax@invalid_del_target.py.snap
---
source: crates/ruff_python_parser/tests/fixtures.rs
input_file: crates/ruff_python_parser/resources/inline/err/invalid_del_target.py
---
## AST

```
Module(
    ModModule {
        node_index: NodeIndex(None),
        range: 0..75,
        body: Suite {
            range: 0..75,
            node_index: NodeIndex(None),
            statements: [
                Delete(
                    StmtDelete {
                        node_index: NodeIndex(None),
                        range: 0..9,
                        targets: [
                            BinOp(
                                ExprBinOp {
                                    node_index: NodeIndex(None),
                                    range: 4..9,
                                    left: Name(
                                        ExprName {
                                            node_index: NodeIndex(None),
                                            range: 4..5,
                                            id: Name("x"),
                                            ctx: Load,
                                        },
                                    ),
                                    op: Add,
                                    right: NumberLiteral(
                                        ExprNumberLiteral {
                                            node_index: NodeIndex(None),
                                            range: 8..9,
                                            value: Int(
                                                1,
                                            ),
                                        },
                                    ),
                                },
                            ),
                        ],
                    },
                ),
                Delete(
                    StmtDelete {
                        node_index: NodeIndex(None),
                        range: 10..22,
                        targets: [
                            Dict(
                                ExprDict {
                                    node_index: NodeIndex(None),
                                    range: 14..22,
                                    items: [
                                        DictItem {
                                            key: Some(
                                                StringLiteral(
                                                    ExprStringLiteral {
                                                        node_index: NodeIndex(None),
                                                        range: 15..18,
                                                        value: StringLiteralValue {
                                                            inner: Single(
                                                                StringLiteral {
                                                                    range: 15..18,
                                                                    node_index: NodeIndex(None),
                                                                    value: "x",
                                                                    flags: StringLiteralFlags {
                                                                        quote_style: Single,
                                                                        prefix: Empty,
                                                                        triple_quoted: false,
                                                                        unclosed: false,
                                                                    },
                                                                },
                                                            ),
                                                        },
                                                    },
                                                ),
                                            ),
                                            value: NumberLiteral(
                                                ExprNumberLiteral {
                                                    node_index: NodeIndex(None),
                                                    range: 20..21,
                                                    value: Int(
                                                        1,
                                                    ),
                                                },
                                            ),
                                        },
                                    ],
                                },
                            ),
                        ],
                    },
                ),
                Delete(
                    StmtDelete {
                        node_index: NodeIndex(None),
                        range: 23..37,
                        targets: [
                            Set(
                                ExprSet {
                                    node_index: NodeIndex(None),
                                    range: 27..37,
                                    elts: [
                                        StringLiteral(
                                            ExprStringLiteral {
                                                node_index: NodeIndex(None),
                                                range: 28..31,
                                                value: StringLiteralValue {
                                                    inner: Single(
                                                        StringLiteral {
                                                            range: 28..31,
                                                            node_index: NodeIndex(None),
                                                            value: "x",
                                                            flags: StringLiteralFlags {
                                                                quote_style: Single,
                                                                prefix: Empty,
                                                                triple_quoted: false,
                                                                unclosed: false,
                                                            },
                                                        },
                                                    ),
                                                },
                                            },
                                        ),
                                        StringLiteral(
                                            ExprStringLiteral {
                                                node_index: NodeIndex(None),
                                                range: 33..36,
                                                value: StringLiteralValue {
                                                    inner: Single(
                                                        StringLiteral {
                                                            range: 33..36,
                                                            node_index: NodeIndex(None),
                                                            value: "y",
                                                            flags: StringLiteralFlags {
                                                                quote_style: Single,
                                                                prefix: Empty,
                                                                triple_quoted: false,
                                                                unclosed: false,
                                                            },
                                                        },
                                                    ),
                                                },
                                            },
                                        ),
                                    ],
                                },
                            ),
                        ],
                    },
                ),
                Delete(
                    StmtDelete {
                        node_index: NodeIndex(None),
                        range: 38..74,
                        targets: [
                            NoneLiteral(
                                ExprNoneLiteral {
                                    node_index: NodeIndex(None),
                                    range: 42..46,
                                },
                            ),
                            BooleanLiteral(
                                ExprBooleanLiteral {
                                    node_index: NodeIndex(None),
                                    range: 48..52,
                                    value: true,
                                },
                            ),
                            BooleanLiteral(
                                ExprBooleanLiteral {
                                    node_index: NodeIndex(None),
                                    range: 54..59,
                                    value: false,
                                },
                            ),
                            NumberLiteral(
                                ExprNumberLiteral {
                                    node_index: NodeIndex(None),
                                    range: 61..62,
                                    value: Int(
                                        1,
                                    ),
                                },
                            ),
                            NumberLiteral(
                                ExprNumberLiteral {
                                    node_index: NodeIndex(None),
                                    range: 64..67,
                                    value: Float(
                                        1.0,
                                    ),
                                },
                            ),
                            StringLiteral(
                                ExprStringLiteral {
                                    node_index: NodeIndex(None),
                                    range: 69..74,
                                    value: StringLiteralValue {
                                        inner: Single(
                                            StringLiteral {
                                                range: 69..74,
                                                node_index: NodeIndex(None),
                                                value: "abc",
                                                flags: StringLiteralFlags {
                                                    quote_style: Double,
                                                    prefix: Empty,
                                                    triple_quoted: false,
                                                    unclosed: false,
                                                },
                                            },
                                        ),
                                    },
                                },
                            ),
                        ],
                    },
                ),
            ],
        },
    },
)
```
## Errors

  |
1 | del x + 1
  |     ^^^^^ Syntax Error: Invalid delete target
2 | del {'x': 1}
3 | del {'x', 'y'}
  |


  |
1 | del x + 1
2 | del {'x': 1}
  |     ^^^^^^^^ Syntax Error: Invalid delete target
3 | del {'x', 'y'}
4 | del None, True, False, 1, 1.0, "abc"
  |


  |
1 | del x + 1
2 | del {'x': 1}
3 | del {'x', 'y'}
  |     ^^^^^^^^^^ Syntax Error: Invalid delete target
4 | del None, True, False, 1, 1.0, "abc"
  |


  |
2 | del {'x': 1}
3 | del {'x', 'y'}
4 | del None, True, False, 1, 1.0, "abc"
  |     ^^^^ Syntax Error: Invalid delete target
  |


  |
2 | del {'x': 1}
3 | del {'x', 'y'}
4 | del None, True, False, 1, 1.0, "abc"
  |           ^^^^ Syntax Error: Invalid delete target
  |


  |
2 | del {'x': 1}
3 | del {'x', 'y'}
4 | del None, True, False, 1, 1.0, "abc"
  |                 ^^^^^ Syntax Error: Invalid delete target
  |


  |
2 | del {'x': 1}
3 | del {'x', 'y'}
4 | del None, True, False, 1, 1.0, "abc"
  |                        ^ Syntax Error: Invalid delete target
  |


  |
2 | del {'x': 1}
3 | del {'x', 'y'}
4 | del None, True, False, 1, 1.0, "abc"
  |                           ^^^ Syntax Error: Invalid delete target
  |


  |
2 | del {'x': 1}
3 | del {'x', 'y'}
4 | del None, True, False, 1, 1.0, "abc"
  |                                ^^^^^ Syntax Error: Invalid delete target
  |
