crates/ruff_python_parser/tests/snapshots/invalid_syntax@invalid_future_feature.py.snap
---
source: crates/ruff_python_parser/tests/fixtures.rs
input_file: crates/ruff_python_parser/resources/inline/err/invalid_future_feature.py
---
## AST

```
Module(
    ModModule {
        node_index: NodeIndex(None),
        range: 0..151,
        body: [
            ImportFrom(
                StmtImportFrom {
                    node_index: NodeIndex(None),
                    range: 0..38,
                    module: Some(
                        Identifier {
                            id: Name("__future__"),
                            range: 5..15,
                            node_index: NodeIndex(None),
                            parameter_node_index: NodeIndex(None),
                        },
                    ),
                    names: [
                        Alias {
                            end: 38,
                            node_index: NodeIndex(None),
                            name: Identifier {
                                id: Name("invalid_feature"),
                                range: 23..38,
                                node_index: NodeIndex(None),
                                parameter_node_index: NodeIndex(None),
                            },
                            asname: None,
                        },
                    ],
                    level: 0,
                    is_lazy: false,
                },
            ),
            ImportFrom(
                StmtImportFrom {
                    node_index: NodeIndex(None),
                    range: 39..90,
                    module: Some(
                        Identifier {
                            id: Name("__future__"),
                            range: 44..54,
                            node_index: NodeIndex(None),
                            parameter_node_index: NodeIndex(None),
                        },
                    ),
                    names: [
                        Alias {
                            end: 73,
                            node_index: NodeIndex(None),
                            name: Identifier {
                                id: Name("annotations"),
                                range: 62..73,
                                node_index: NodeIndex(None),
                                parameter_node_index: NodeIndex(None),
                            },
                            asname: None,
                        },
                        Alias {
                            end: 90,
                            node_index: NodeIndex(None),
                            name: Identifier {
                                id: Name("invalid_feature"),
                                range: 75..90,
                                node_index: NodeIndex(None),
                                parameter_node_index: NodeIndex(None),
                            },
                            asname: None,
                        },
                    ],
                    level: 0,
                    is_lazy: false,
                },
            ),
            ImportFrom(
                StmtImportFrom {
                    node_index: NodeIndex(None),
                    range: 91..150,
                    module: Some(
                        Identifier {
                            id: Name("__future__"),
                            range: 96..106,
                            node_index: NodeIndex(None),
                            parameter_node_index: NodeIndex(None),
                        },
                    ),
                    names: [
                        Alias {
                            end: 131,
                            node_index: NodeIndex(None),
                            name: Identifier {
                                id: Name("invalid_feature_1"),
                                range: 114..131,
                                node_index: NodeIndex(None),
                                parameter_node_index: NodeIndex(None),
                            },
                            asname: None,
                        },
                        Alias {
                            end: 150,
                            node_index: NodeIndex(None),
                            name: Identifier {
                                id: Name("invalid_feature_2"),
                                range: 133..150,
                                node_index: NodeIndex(None),
                                parameter_node_index: NodeIndex(None),
                            },
                            asname: None,
                        },
                    ],
                    level: 0,
                    is_lazy: false,
                },
            ),
        ],
    },
)
```
## Semantic Syntax Errors

  |
1 | from __future__ import invalid_feature
  |                        ^^^^^^^^^^^^^^^ Syntax Error: Future feature `invalid_feature` is not defined
2 | from __future__ import annotations, invalid_feature
3 | from __future__ import invalid_feature_1, invalid_feature_2
  |


  |
1 | from __future__ import invalid_feature
2 | from __future__ import annotations, invalid_feature
  |                                     ^^^^^^^^^^^^^^^ Syntax Error: Future feature `invalid_feature` is not defined
3 | from __future__ import invalid_feature_1, invalid_feature_2
  |


  |
1 | from __future__ import invalid_feature
2 | from __future__ import annotations, invalid_feature
3 | from __future__ import invalid_feature_1, invalid_feature_2
  |                        ^^^^^^^^^^^^^^^^^ Syntax Error: Future feature `invalid_feature_1` is not defined
  |


  |
1 | from __future__ import invalid_feature
2 | from __future__ import annotations, invalid_feature
3 | from __future__ import invalid_feature_1, invalid_feature_2
  |                                           ^^^^^^^^^^^^^^^^^ Syntax Error: Future feature `invalid_feature_2` is not defined
  |
