crates/ruff_python_parser/tests/snapshots/invalid_syntax@invalid_string_literal.py.snap
---
source: crates/ruff_python_parser/tests/fixtures.rs
input_file: crates/ruff_python_parser/resources/inline/err/invalid_string_literal.py
---
## AST

```
Module(
    ModModule {
        node_index: NodeIndex(None),
        range: 0..56,
        body: Suite {
            range: 0..56,
            node_index: NodeIndex(None),
            statements: [
                Expr(
                    StmtExpr {
                        node_index: NodeIndex(None),
                        range: 0..25,
                        value: StringLiteral(
                            ExprStringLiteral {
                                node_index: NodeIndex(None),
                                range: 0..25,
                                value: StringLiteralValue {
                                    inner: Single(
                                        StringLiteral {
                                            range: 0..25,
                                            node_index: NodeIndex(None),
                                            value: "",
                                            flags: StringLiteralFlags {
                                                quote_style: Single,
                                                prefix: Empty,
                                                triple_quoted: false,
                                                unclosed: false,
                                            },
                                        },
                                    ),
                                },
                            },
                        ),
                    },
                ),
                Expr(
                    StmtExpr {
                        node_index: NodeIndex(None),
                        range: 26..55,
                        value: StringLiteral(
                            ExprStringLiteral {
                                node_index: NodeIndex(None),
                                range: 26..55,
                                value: StringLiteralValue {
                                    inner: Single(
                                        StringLiteral {
                                            range: 26..55,
                                            node_index: NodeIndex(None),
                                            value: "",
                                            flags: StringLiteralFlags {
                                                quote_style: Double,
                                                prefix: Empty,
                                                triple_quoted: true,
                                                unclosed: false,
                                            },
                                        },
                                    ),
                                },
                            },
                        ),
                    },
                ),
            ],
        },
    },
)
```
## Errors

  |
1 | 'hello \N{INVALID} world'
  |           ^^^^^^^ Syntax Error: Got unexpected unicode
2 | """hello \N{INVALID} world"""
  |


  |
1 | 'hello \N{INVALID} world'
2 | """hello \N{INVALID} world"""
  |             ^^^^^^^ Syntax Error: Got unexpected unicode
  |
